[tool.poetry]
name = "immunopipe-example"
version = "0.0.0"
description = "An example for immunopipe"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pipen = "^0.3.5"
biopipen = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
